sys_amqp, synchronized to lock, refactorings CopyOnWriteArrayList -> ConcurrentList